--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "source": "https://github.com/mll-lab/laravel-utils"
   },
   "require": {
-    "php": "^7.4 || ^8",
+    "php": "^8.1",
     "illuminate/support": "^8.73 || ^9",
     "mll-lab/str_putcsv": "^1",
     "thecodingmachine/safe": "^1"
