--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
   "require": {
     "php": "^8.1",
     "illuminate/support": "^8.73 || ^9.45",
+    "nesbot/carbon": "^2.64",
+    "ramsey/uuid": "^4.7",
     "mll-lab/str_putcsv": "^1",
     "thecodingmachine/safe": "^1"
   },
