feat: add model states logic (#1)

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,3 +10,7 @@ parameters:
 
 	# As long as we support multiple Laravel versions at once, there will be some dead spots
 	reportUnmatchedIgnoredErrors: false
+	ignoreErrors:
+	# PHPStan does not believe interfaces can define magic properties
+	- '#Access to an undefined property .*MLL\\LaravelUtils\\ModelStates\\HasStateManagerInterface::\$stateManager\.#'
+	- '#Access to an undefined property .*MLL\\LaravelUtils\\ModelStates\\HasStateManagerInterface::\$state\.#'
