--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
       "name": "Benedikt Franke",
       "email": "benedikt@franke.tech"
+    },
+    {
+      "name": "Simon Bigelmayr",
+      "email": "s.bigelmayr@gmx.net"
     }
   ],
   "homepage": "https://github.com/mll-lab/laravel-utils",
@@ -15,15 +19,19 @@
     "source": "https://github.com/mll-lab/laravel-utils"
   },
   "require": {
-    "php": "^7.4 || ^8",
-    "illuminate/support": "^8.73 || ^9",
+    "php": "^8.1",
+    "illuminate/support": "^8.73 || ^9.45",
     "mll-lab/str_putcsv": "^1",
+    "nesbot/carbon": "^2.64",
+    "ramsey/uuid": "^4.7",
     "thecodingmachine/safe": "^1"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2",
     "jangregor/phpstan-prophecy": "^1",
+    "jbzoo/mermaid-php": "^2.3",
     "laravel/framework": "^8.73 || ^9",
+    "mll-lab/graphql-php-scalars": "^4.0 || ^5.0",
     "mll-lab/php-cs-fixer-config": "^4.3",
     "nunomaduro/larastan": "^0.7 || ^1 || ^2",
     "orchestra/testbench": "^6.25 || ^7.7",
@@ -33,8 +41,11 @@
     "phpstan/phpstan-phpunit": "^1",
     "phpstan/phpstan-strict-rules": "^1",
     "phpunit/phpunit": "^9",
-    "rector/rector": "^0.14.5",
+    "rector/rector": "^0.15.2",
     "thecodingmachine/phpstan-safe-rule": "^1.2"
+  },
+  "suggest": {
+    "jbzoo/mermaid-php": "Used for visualization of the transition graph of the model states"
   },
   "autoload": {
     "psr-4": {
@@ -43,6 +54,7 @@
   },
   "autoload-dev": {
     "psr-4": {
+      "App\\": "app/",
       "MLL\\LaravelUtils\\Tests\\": "tests/"
     }
   },
@@ -54,5 +66,12 @@
     },
     "preferred-install": "dist",
     "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "MLL\\LaravelUtils\\ModelStates\\ModelStatesServiceProvider"
+      ]
+    }
   }
 }
