--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
   "extra": {
     "laravel": {
       "providers": [
+        "MLL\\LaravelUtils\\Database\\DatabaseServiceProvider",
         "MLL\\LaravelUtils\\ModelStates\\ModelStatesServiceProvider"
       ]
     }
