--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -101,8 +101,7 @@ jobs:
           - 8.1
           - 8.2
         laravel-version:
-          - ^8
-          - ^9
+          - ^9.51
 
     steps:
       - uses: actions/checkout@v3
@@ -126,18 +125,16 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         php-version:
           - 8.1
           - 8.2
-
         dependencies:
           - lowest
           - highest
-
-        illuminate:
-          - ^8.73
-          - ^9
+        laravel-version:
+          - ^9.51
 
     services:
       mariadb:
@@ -160,8 +157,8 @@ jobs:
           extensions: mbstring
           php-version: ${{ matrix.php-version }}
 
-      - name: "Install illuminate"
-        run: composer require "illuminate/support:${{ matrix.illuminate }}" --no-interaction --no-update
+      - name: "Install Laravel"
+        run: composer require "illuminate/support:${{ matrix.laravel-version }}" --no-interaction --no-update
 
       - name: "Install lowest dependencies with composer"
         if: matrix.dependencies == 'lowest'
@@ -181,7 +178,7 @@ jobs:
 
     services:
       mariadb:
-        image: mariadb:10.5
+        image: mariadb:10.6
         env:
           MYSQL_DATABASE: test
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
