--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require": {
     "php": "^8.1",
-    "illuminate/support": "^8.73 || ^9.45",
+    "illuminate/support": "^9.51",
     "mll-lab/str_putcsv": "^1",
     "nesbot/carbon": "^2.64",
     "ramsey/uuid": "^4.7",
@@ -30,18 +30,17 @@
     "ergebnis/composer-normalize": "^2",
     "jangregor/phpstan-prophecy": "^1",
     "jbzoo/mermaid-php": "^2.3",
-    "laravel/framework": "^8.73 || ^9",
-    "mll-lab/graphql-php-scalars": "^4.0 || ^5.0",
-    "mll-lab/php-cs-fixer-config": "^4.3",
-    "nunomaduro/larastan": "^0.7 || ^1 || ^2",
-    "orchestra/testbench": "^6.25 || ^7.7",
+    "laravel/framework": "^9",
+    "mll-lab/graphql-php-scalars": "^4 || ^5",
+    "mll-lab/php-cs-fixer-config": "^5",
+    "mll-lab/rector-config": "^2",
+    "nunomaduro/larastan": "^2",
+    "orchestra/testbench": "^7.7",
     "phpstan/extension-installer": "^1",
-    "phpstan/phpstan": "^1",
     "phpstan/phpstan-deprecation-rules": "^1",
     "phpstan/phpstan-phpunit": "^1",
     "phpstan/phpstan-strict-rules": "^1",
     "phpunit/phpunit": "^9",
-    "rector/rector": "^0.15.2",
     "thecodingmachine/phpstan-safe-rule": "^1.2"
   },
   "suggest": {
@@ -70,6 +69,7 @@
   "extra": {
     "laravel": {
       "providers": [
+        "MLL\\LaravelUtils\\Database\\DatabaseServiceProvider",
         "MLL\\LaravelUtils\\ModelStates\\ModelStatesServiceProvider"
       ]
     }
