--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   },
   "require": {
     "php": "^8.1",
+    "bensampo/laravel-enum": "^6.3",
     "illuminate/support": "^9.51",
     "mll-lab/str_putcsv": "^1",
     "nesbot/carbon": "^2.64",
