--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -98,10 +98,11 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - 8.1
-          - 8.2
+          - "8.1"
+          - "8.2"
         laravel-version:
           - ^9.51
+          - ^10
 
     steps:
       - uses: actions/checkout@v3
@@ -128,13 +129,14 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - 8.1
-          - 8.2
+          - "8.1"
+          - "8.2"
         dependencies:
           - lowest
           - highest
         laravel-version:
           - ^9.51
+          - ^10
 
     services:
       mariadb:
@@ -155,7 +157,7 @@ jobs:
         with:
           coverage: none
           extensions: mbstring
-          php-version: ${{ matrix.php-version }}
+          php-version: "${{ matrix.php-version }}"
 
       - name: "Install Laravel"
         run: composer require "illuminate/support:${{ matrix.laravel-version }}" --no-interaction --no-update
@@ -200,11 +202,8 @@ jobs:
       - name: "Install dependencies with composer"
         run: composer install --no-interaction --no-progress --no-suggest
 
-      - name: "Dump Xdebug filter with phpunit/phpunit"
-        run: vendor/bin/phpunit --dump-xdebug-filter=xdebug-filter.php
-
       - name: "Collect code coverage with Xdebug and phpunit/phpunit"
-        run: vendor/bin/phpunit --coverage-clover=clover.xml --prepend=xdebug-filter.php
+        run: vendor/bin/phpunit --coverage-clover=clover.xml
 
       - name: "Send code coverage report to codecov.io"
         uses: codecov/codecov-action@v2
