--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require": {
     "php": "^8.1",
-    "illuminate/support": "^9.51 || ^10",
+    "illuminate/support": "^9.51 || ^10 || ^11",
     "mll-lab/str_putcsv": "^1",
     "nesbot/carbon": "^2.64",
     "ramsey/uuid": "^4.7",
@@ -32,16 +32,16 @@
     "jangregor/phpstan-prophecy": "^1",
     "jbzoo/mermaid-php": "^2.3",
     "larastan/larastan": "^2",
-    "laravel/framework": "^9 || ^10",
+    "laravel/framework": "^9 || ^10 || ^11",
     "mll-lab/graphql-php-scalars": "^4 || ^5",
     "mll-lab/php-cs-fixer-config": "^5",
     "mll-lab/rector-config": "^2",
-    "orchestra/testbench": "^7.7 || ^8",
+    "orchestra/testbench": "^7.7 || ^8 || ^9",
     "phpstan/extension-installer": "^1",
     "phpstan/phpstan-deprecation-rules": "^1",
     "phpstan/phpstan-phpunit": "^1",
     "phpstan/phpstan-strict-rules": "^1",
-    "phpunit/phpunit": "^9 || ^10",
+    "phpunit/phpunit": "^9 || ^10 || ^11",
     "thecodingmachine/phpstan-safe-rule": "^1.2"
   },
   "suggest": {
