--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "php": "^8.1",
     "illuminate/support": "^9.51 || ^10 || ^11",
     "mll-lab/str_putcsv": "^1",
-    "nesbot/carbon": "^2.64",
+    "nesbot/carbon": "^2.64 || ^3.2",
     "ramsey/uuid": "^4.7",
     "thecodingmachine/safe": "^1 || ^2"
   },
