move declaration of state-column-name from general config to state class

--- a/composer.json
+++ b/composer.json
@@ -72,8 +72,7 @@
       "providers": [
         "MLL\\LaravelUtils\\LaravelUtilsServiceProvider",
         "MLL\\LaravelUtils\\Database\\DatabaseServiceProvider",
-        "MLL\\LaravelUtils\\Mail\\MailServiceProvider",
-        "MLL\\LaravelUtils\\ModelStates\\ModelStatesServiceProvider"
+        "MLL\\LaravelUtils\\Mail\\MailServiceProvider"
       ]
     }
   }
