--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "mll-lab/rector-config": "^2",
     "orchestra/testbench": "^9 || ^10",
     "phpstan/extension-installer": "^1",
+    "phpstan/phpstan": "^1.12.19",
     "phpstan/phpstan-deprecation-rules": "^1",
     "phpstan/phpstan-phpunit": "^1",
     "phpstan/phpstan-strict-rules": "^1",
