--- a/composer.json
+++ b/composer.json
@@ -29,19 +29,19 @@
   "require-dev": {
     "doctrine/dbal": "^3.6",
     "ergebnis/composer-normalize": "^2",
-    "jangregor/phpstan-prophecy": "^1",
+    "jangregor/phpstan-prophecy": "^2",
     "jbzoo/mermaid-php": "^2.3",
-    "larastan/larastan": "^2 || ^3",
+    "larastan/larastan": "^3",
     "laravel/framework": "^11",
     "mll-lab/graphql-php-scalars": "^4 || ^5",
     "mll-lab/php-cs-fixer-config": "^5",
     "mll-lab/rector-config": "^2",
     "orchestra/testbench": "^9 || ^10",
     "phpstan/extension-installer": "^1",
-    "phpstan/phpstan": "^1.12.19",
-    "phpstan/phpstan-deprecation-rules": "^1",
-    "phpstan/phpstan-phpunit": "^1",
-    "phpstan/phpstan-strict-rules": "^1",
+    "phpstan/phpstan": "^2",
+    "phpstan/phpstan-deprecation-rules": "^2",
+    "phpstan/phpstan-phpunit": "^2",
+    "phpstan/phpstan-strict-rules": "^2",
     "phpunit/phpunit": "^11.5.10 || ^12",
     "thecodingmachine/phpstan-safe-rule": "^1.2"
   },
