--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
   },
   "require": {
     "php": "^8.2",
-    "illuminate/support": "^9.51 || ^10 || ^11",
-    "mll-lab/php-utils": "^1.13 || ^2 || ^3 || ^4 || ^5",
+    "illuminate/support": "^11",
+    "mll-lab/php-utils": "^5.2",
     "mll-lab/str_putcsv": "^1",
     "ramsey/uuid": "^4.7",
     "thecodingmachine/safe": "^1 || ^2"
@@ -29,19 +29,20 @@
   "require-dev": {
     "doctrine/dbal": "^3.6",
     "ergebnis/composer-normalize": "^2",
-    "jangregor/phpstan-prophecy": "^1",
+    "jangregor/phpstan-prophecy": "^2",
     "jbzoo/mermaid-php": "^2.3",
-    "larastan/larastan": "^2",
-    "laravel/framework": "^9 || ^10 || ^11",
+    "larastan/larastan": "^3",
+    "laravel/framework": "^11",
     "mll-lab/graphql-php-scalars": "^4 || ^5",
     "mll-lab/php-cs-fixer-config": "^5",
     "mll-lab/rector-config": "^2",
-    "orchestra/testbench": "^7.7 || ^8 || ^9",
+    "orchestra/testbench": "^9 || ^10",
     "phpstan/extension-installer": "^1",
-    "phpstan/phpstan-deprecation-rules": "^1",
-    "phpstan/phpstan-phpunit": "^1",
-    "phpstan/phpstan-strict-rules": "^1",
-    "phpunit/phpunit": "^9 || ^10 || ^11",
+    "phpstan/phpstan": "^2",
+    "phpstan/phpstan-deprecation-rules": "^2",
+    "phpstan/phpstan-phpunit": "^2",
+    "phpstan/phpstan-strict-rules": "^2",
+    "phpunit/phpunit": "^11.5.10 || ^12",
     "thecodingmachine/phpstan-safe-rule": "^1.2"
   },
   "suggest": {
@@ -75,5 +76,10 @@
         "MLL\\LaravelUtils\\Mail\\MailServiceProvider"
       ]
     }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "[ -f vendor/bin/testbench ] && vendor/bin/testbench package:discover || true"
+    ]
   }
 }
