--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,13 +1,18 @@
 parameters:
   level: max
   paths:
+  - app
   - src
   - tests
+  # Install https://plugins.jetbrains.com/plugin/7677-awesome-console to make those links clickable
+  editorUrl: '%%relFile%%:%%line%%'
+  editorUrlTitle: '%%relFile%%:%%line%%'
   reportUnmatchedIgnoredErrors: false # As long as we support multiple Laravel versions at once, there will be some dead spots
+  # Unnecessary because we do no configuration caching
+  noEnvCallsOutsideOfConfig: false
   ignoreErrors:
   # PHPStan does not believe interfaces can define magic properties
   - '#Access to an undefined property .*MLL\\LaravelUtils\\ModelStates\\HasStateManagerInterface::\$stateManager\.#'
   - '#Access to an undefined property .*MLL\\LaravelUtils\\ModelStates\\HasStateManagerInterface::\$state\.#'
-  # Install https://plugins.jetbrains.com/plugin/7677-awesome-console to make those links clickable
-  editorUrl: '%%relFile%%:%%line%%'
-  editorUrlTitle: '%%relFile%%:%%line%%'
+  # See https://github.com/phpstan/phpstan-strict-rules/issues/140
+  - '#Dynamic call to static method Illuminate\\Support\\Collection.+::interpose\(\)\.#'
