--- a/rules.neon
+++ b/rules.neon
@@ -1,6 +1,30 @@
 parameters:
   disallowedMethodCalls:
   - method: 'Illuminate\Support\Collection::toArray()'
+  - method: 'Illuminate\Database\Eloquent\Factories\Factory::createOne()'
+    message: 'Creating or filling models through arrays prevents static validation from working.'
+    errorTip: 'Use createOne() without the array parameter.'
+    allowExceptParamsAnyValue:
+    - position: 1
+      name: 'attributes'
+  - method: 'Illuminate\Database\Eloquent\Factories\Factory::makeOne()'
+    message: 'Creating or filling models through arrays prevents static validation from working.'
+    errorTip: 'Use makeOne() without the array parameter.'
+    allowExceptParamsAnyValue:
+    - position: 1
+      name: 'attributes'
+  - method: 'Illuminate\Database\Eloquent\Factories\Factory::create()'
+    message: 'Creating or filling models through arrays prevents static validation from working.'
+    errorTip: 'Use create() without the array parameter.'
+    allowExceptParamsAnyValue:
+    - position: 1
+      name: 'attributes'
+  - method: 'Illuminate\Database\Eloquent\Factories\Factory::make()'
+    message: 'Creating or filling models through arrays prevents static validation from working.'
+    errorTip: 'Use make() without the array parameter.'
+    allowExceptParamsAnyValue:
+    - position: 1
+      name: 'attributes'
     message: 'because it is inefficient and provides no type inference'
     errorTip: 'use all() instead'
   - method: 'Illuminate\Support\Collection::where()'
