--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
   "autoload-dev": {
     "psr-4": {
       "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
       "MLL\\LaravelUtils\\Tests\\": "tests/"
     }
   },
