--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,7 +7,10 @@ parameters:
   - src
   - tests
   excludePaths:
+  # Intentionally contains errors
   - tests/PHPStan/data
+  # Mixins are not recognized with the latest dependencies, TODO try removing this again
+  - tests/Collection/CollectionMixinTest.php
   # Install https://plugins.jetbrains.com/plugin/7677-awesome-console to make those links clickable
   editorUrl: '%%relFile%%:%%line%%'
   editorUrlTitle: '%%relFile%%:%%line%%'
