--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require": {
     "php": "^8.2",
-    "illuminate/support": "^11",
+    "illuminate/support": "^11 || ^12",
     "mll-lab/php-utils": "^5.2",
     "mll-lab/str_putcsv": "^1",
     "ramsey/uuid": "^4.7",
@@ -32,7 +32,7 @@
     "jangregor/phpstan-prophecy": "^2",
     "jbzoo/mermaid-php": "^2.3",
     "larastan/larastan": "^3",
-    "laravel/framework": "^11",
+    "laravel/framework": "^11 || ^12",
     "mll-lab/graphql-php-scalars": "^4 || ^5",
     "mll-lab/php-cs-fixer-config": "^5",
     "mll-lab/rector-config": "^2",
@@ -43,10 +43,12 @@
     "phpstan/phpstan-phpunit": "^2",
     "phpstan/phpstan-strict-rules": "^2",
     "phpunit/phpunit": "^11.5.10 || ^12",
+    "spaze/phpstan-disallowed-calls": "^4.4",
     "thecodingmachine/phpstan-safe-rule": "^1.2"
   },
   "suggest": {
-    "jbzoo/mermaid-php": "Used for visualization of the transition graph of the model states"
+    "jbzoo/mermaid-php": "Used for visualization of the transition graph of the model states",
+    "spaze/phpstan-disallowed-calls": "Required when using the PHPStan configuration from rules.neon directly or through the extension installer"
   },
   "autoload": {
     "psr-4": {
@@ -56,6 +58,7 @@
   "autoload-dev": {
     "psr-4": {
       "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
       "MLL\\LaravelUtils\\Tests\\": "tests/"
     }
   },
@@ -74,6 +77,11 @@
         "MLL\\LaravelUtils\\LaravelUtilsServiceProvider",
         "MLL\\LaravelUtils\\Database\\DatabaseServiceProvider",
         "MLL\\LaravelUtils\\Mail\\MailServiceProvider"
+      ]
+    },
+    "phpstan": {
+      "includes": [
+        "rules.neon"
       ]
     }
   },
