Enforce usage of Carbon\Carbon

--- a/rules.neon
+++ b/rules.neon
@@ -1,5 +1,9 @@
 parameters:
   # https://github.com/spaze/phpstan-disallowed-calls/blob/main/docs/custom-rules.md
+  disallowedClasses:
+  - class: 'Illuminate\Support\Carbon'
+    message: 'it is mostly just an alias.'
+	errorTip: 'use Carbon\Carbon instead.'
   disallowedMethodCalls:
   - method: 'Illuminate\Database\Eloquent\Model::update()'
     message: 'it assigns attributes through an array and is not type safe, without parameters it is like save().'
