--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "mll-lab/php-utils": "^5.2",
     "mll-lab/str_putcsv": "^1",
     "ramsey/uuid": "^4.7",
-    "thecodingmachine/safe": "^1 || ^2"
+    "thecodingmachine/safe": "^1 || ^2 || ^3"
   },
   "require-dev": {
     "doctrine/dbal": "^3.6",
