--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "jbzoo/mermaid-php": "^2.3",
     "larastan/larastan": "^3.2",
     "laravel/framework": "^11 || ^12",
-    "mll-lab/graphql-php-scalars": "^4 || ^5",
+    "mll-lab/graphql-php-scalars": "^4 || ^5 || ^6",
     "mll-lab/php-cs-fixer-config": "^5",
     "mll-lab/rector-config": "^2",
     "orchestra/testbench": "^9 || ^10",
