--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "mll-lab/php-utils": "^5.2",
     "mll-lab/str_putcsv": "^1",
     "ramsey/uuid": "^4.7",
-    "thecodingmachine/safe": "^1 || ^2"
+    "thecodingmachine/safe": "^1 || ^2 || ^3"
   },
   "require-dev": {
     "doctrine/dbal": "^3.6",
@@ -33,7 +33,7 @@
     "jbzoo/mermaid-php": "^2.3",
     "larastan/larastan": "^3.2",
     "laravel/framework": "^11 || ^12",
-    "mll-lab/graphql-php-scalars": "^4 || ^5",
+    "mll-lab/graphql-php-scalars": "^4 || ^5 || ^6",
     "mll-lab/php-cs-fixer-config": "^5",
     "mll-lab/rector-config": "^2",
     "orchestra/testbench": "^9 || ^10",
