Force usage of `Illuminate\Database\Eloquent\Relations\HasOneOrMany::chaperone()` over its alias `inverse()` via PHPStan rule

--- a/rules.neon
+++ b/rules.neon
@@ -8,6 +8,9 @@ parameters:
   - method: 'Illuminate\Database\Eloquent\Model::update()'
     message: 'it assigns attributes through an array and is not type safe, without parameters it is like save().'
     errorTip: 'Assign attributes through property assignment, then call save(). If your intention was to not save new models, check $exists explicitly.'
+  - method: 'Illuminate\Database\Eloquent\Relations\HasOneOrMany::inverse()'
+    message: 'it is an alias for chaperone().'
+    errorTip: 'Use chaperone() instead.'
   - method: 'Illuminate\Database\Eloquent\Factories\Factory::createOne()'
     message: 'creating or filling models through arrays prevents static validation from working.'
     errorTip: 'Call createOne() without any parameters, use property assignment to fill the model.'
