Forbid eager-loading on single Model instances

--- a/rules.neon
+++ b/rules.neon
@@ -8,6 +8,12 @@ parameters:
   - method: 'Illuminate\Database\Eloquent\Model::update()'
     message: 'it assigns attributes through an array and is not type safe, without parameters it is like save().'
     errorTip: 'Assign attributes through property assignment, then call save(). If your intention was to not save new models, check $exists explicitly.'
+  - method: 'Illuminate\Database\Eloquent\Model::load()'
+    message: 'eager-loading on single Model instances makes no sense.'
+    errorTip: 'Use eager-loading on Eloquent Collection instances.'
+  - method: 'Illuminate\Database\Eloquent\Model::loadMissing()'
+    message: 'eager-loading on single Model instances makes no sense.'
+    errorTip: 'Use eager-loading on Eloquent Collection instances.'
   - method: 'Illuminate\Database\Eloquent\Relations\HasOneOrMany::inverse()'
     message: 'it is an alias for chaperone().'
     errorTip: 'Use chaperone() instead.'
