feat: allow php-utils v6
The breaking change in php-utils v6 (IlluminaSampleSheet V2 redesign)
does not affect laravel-utils, which has no direct dependency on those
classes.

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "php": "^8.2",
     "illuminate/support": "^11 || ^12",
-    "mll-lab/php-utils": "^5.2",
+    "mll-lab/php-utils": "^5.2 || ^6",
     "mll-lab/str_putcsv": "^1",
     "ramsey/uuid": "^4.7",
     "thecodingmachine/safe": "^1 || ^2 || ^3"
